--- a/index.html
+++ b/index.html
@@ -100,14 +100,17 @@
                  <h2 class="what-we-do-headline">Чем мы занимаемся</h2>
                      <ul class="what-we-do-list list">
                          <li class="what-we-do-item">
-                         <img class="what-we-do-img" width="370" src="./images/img1.jpg" alt="код на экране планшета">
-                          </li>
+                         <img class="what-we-do-img" src="./images/img1.jpg" alt="код на экране планшета">
+                        <p class="what-we-do-description">Десктопные приложения</p>  
+                        </li>
                          <li class="what-we-do-item">
-                          <img class="what-we-do-img" width="370" src="./images/img2.jpg" alt="макет телефона на экране">
-                          </li>
+                          <img class="what-we-do-img" src="./images/img2.jpg" alt="макет телефона на экране">
+                        <p class="what-we-do-description">Мобильные приложения</p>    
+                        </li>
                           <li class="what-we-do-item">
-                         <img class="what-we-do-img" width="370" src="./images/img3.jpg" alt="цветовая палитра на экране планшета">
-                          </li>                
+                         <img class="what-we-do-img" src="./images/img3.jpg" alt="цветовая палитра на экране планшета">
+                        <p class="what-we-do-description">Дизайнерские решения</p>    
+                        </li>                
                      </ul>
             </div>
         </section>
@@ -289,12 +292,13 @@
     </footer>
 <div class="backdrop is-hidden" data-modal>
     <div class="modal">
+        <div class="modal-close">
         <a data-modal-close class="modal-cross-link" href="">
               <svg class="modal-icon">
               <use href="./images/sprite.svg#icon-cross"></use>
               </svg>
         </a>
-        
+       </div> 
     </div>
     
 </div>
