--- a/portfolio.html
+++ b/portfolio.html
@@ -59,8 +59,11 @@
              <ul class="portfolio-list list">
             <li class="portfolio-list-item">
                 <a class="portfolio-list-link link" href="">
-                <img class="portfolio-img" src="./images/tehno.jpg" alt="Веб-сайт на ноутбуке">
-                <div class="portfolio-card">
+                <div class="portfolio-thumb">
+                    <p class="portfolio-thumb-description">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                    <img class="portfolio-img" src="./images/tehno.jpg" alt="Веб-сайт на ноутбуке">
+                </div>
+                    <div class="portfolio-card">
                 <h3 class="portfolio-headline">Технокряк</h3>
                 <p class="portfolio-paragraph">Веб-сайт</p>
                 </div>
@@ -68,7 +71,9 @@
             </li>
             <li class="portfolio-list-item">
                 <a class="portfolio-list-link link" href="">
-                <img class="portfolio-img" src="./images/basketball.jpg" alt="Дизайн баскетбольно постера">
+                    <div class="portfolio-thumb">
+                    <img class="portfolio-img" src="./images/basketball.jpg" alt="Дизайн баскетбольно постера">
+                    </div>   
                 <div class="portfolio-card">
                 <h3 class="portfolio-headline">Постер New Orlean vs Golden Star</h3>
                 <p class="portfolio-paragraph">Дизайн</p>
@@ -76,9 +81,12 @@
                 </a>
             </li>
             <li class="portfolio-list-item">
+                 
                 <a class="portfolio-list-link link" href="">
+                 <div class="portfolio-thumb">    
                 <img class="portfolio-img" src="./images/cafe-logo.jpg" alt="Лого ресторана">
-                 <div class="portfolio-card">
+                </div> 
+                <div class="portfolio-card">
                 <h3 class="portfolio-headline">Ресторан Seafood</h3>
                 <p class="portfolio-paragraph">Приложение</p>
                 </div>
@@ -86,8 +94,10 @@
             </li>
             <li class="portfolio-list-item">
                 <a class="portfolio-list-link link" href="">
+                     <div class="portfolio-thumb">
                 <img class="portfolio-img" src="./images/headphones.jpg" alt="Наушники">
-                 <div class="portfolio-card">
+                     </div> 
+                <div class="portfolio-card">
                 <h3 class="portfolio-headline">Проект Prime</h3>
                 <p class="portfolio-paragraph">Маркетинг</p>
                 </div>
@@ -95,8 +105,10 @@
             </li>
             <li class="portfolio-list-item">
                 <a class="portfolio-list-link link" href="">
-                <img class="portfolio-img" src="./images/boxes.jpg" alt="Картонные коробки">
-                 <div class="portfolio-card">
+                     <div class="portfolio-thumb">
+                    <img class="portfolio-img" src="./images/boxes.jpg" alt="Картонные коробки">
+                      </div>
+                    <div class="portfolio-card">
                 <h3 class="portfolio-headline">Проект Boxes</h3>
                 <p class="portfolio-paragraph">Приложение</p>
                 </div>
@@ -104,8 +116,10 @@
             </li>
             <li class="portfolio-list-item">
                 <a class="portfolio-list-link link" href="">
-                <img class="portfolio-img" src="./images/mac.jpg" alt="iMac с открытым приложением">
-                 <div class="portfolio-card">
+                 <div class="portfolio-thumb">
+                    <img class="portfolio-img" src="./images/mac.jpg" alt="iMac с открытым приложением">
+                 </div>
+                    <div class="portfolio-card">
                 <h3 class="portfolio-headline">Inspiration has no Borders</h3>
                 <p class="portfolio-paragraph">Веб-сайт</p>
                 </div>
@@ -113,8 +127,10 @@
             </li>
             <li class="portfolio-list-item">
                 <a class="portfolio-list-link link" href="">
-                <img class="portfolio-img" src="./images/book.jpg" alt="Открытая книга">
-                 <div class="portfolio-card">
+                 <div class="portfolio-thumb">
+                    <img class="portfolio-img" src="./images/book.jpg" alt="Открытая книга">
+                </div>
+                    <div class="portfolio-card">
                 <h3 class="portfolio-headline">Издание Limited Edition</h3>
                 <p class="portfolio-paragraph">Дизайн</p>
                 </div>
@@ -122,8 +138,10 @@
             </li>
             <li class="portfolio-list-item">
                 <a class="portfolio-list-link link" href="">
-                <img class="portfolio-img" src="./images/tag.jpg" alt="Этикетка с логотипом">
-                 <div class="portfolio-card">
+               <div class="portfolio-thumb">
+                    <img class="portfolio-img" src="./images/tag.jpg" alt="Этикетка с логотипом">
+                </div>
+                    <div class="portfolio-card">
                 <h3 class="portfolio-headline">Проект LAB</h3>
                 <p class="portfolio-paragraph">Маркетинг</p>
                 </div>
@@ -131,8 +149,10 @@
             </li>
             <li class="portfolio-list-item">
                 <a class="portfolio-list-link link" href="">
-                <img class="portfolio-img" src="./images/laptop.jpg" alt="Веб-сайт на ноутбуке">
-                 <div class="portfolio-card">
+               <div class="portfolio-thumb">
+                    <img class="portfolio-img" src="./images/laptop.jpg" alt="Веб-сайт на ноутбуке">
+                 </div>
+                    <div class="portfolio-card">
                 <h3 class="portfolio-headline">Growing Business</h3>
                 <p class="portfolio-paragraph">Приложение</p>
                 </div>
