--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <ul class="advantages-list list">
                 <li class="advantages-list-item">
                     <div class="advnatages-icon-container">
-                        <svg class="advantages-icon">
+                        <svg class="advantages-icon">w
                         <use href="./images/sprite.svg#icon-antenna"></use>
                     </svg>
                     </div>
