--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <main>
         <!--Секция Hero-->
         <section class="hero">
-            <div class="container">
+            <div class="overlay">
             <h1 class="hero-headline">Эффективные решения для вашего бизнеса</h1>
             <div class="hero-button">
             <button data-modal-open class="modal-button" type="button">Заказать услугу</button>
