--- a/index.html
+++ b/index.html
@@ -101,15 +101,18 @@
                      <ul class="what-we-do-list list">
                          <li class="what-we-do-item">
                          <img class="what-we-do-img" src="./images/img1.jpg" alt="код на экране планшета">
-                        <p class="what-we-do-description">Десктопные приложения</p>  
+                        <div class="waht-we-do-lower"><p class="what-we-do-description">Десктопные приложения</p>  
+                        </div>
                         </li>
                          <li class="what-we-do-item">
                           <img class="what-we-do-img" src="./images/img2.jpg" alt="макет телефона на экране">
-                        <p class="what-we-do-description">Мобильные приложения</p>    
+                        <div class="waht-we-do-lower"><p class="what-we-do-description">Мобильные приложения</p>    
+                        </div>
                         </li>
                           <li class="what-we-do-item">
                          <img class="what-we-do-img" src="./images/img3.jpg" alt="цветовая палитра на экране планшета">
-                        <p class="what-we-do-description">Дизайнерские решения</p>    
+                        <div class="waht-we-do-lower"><p class="what-we-do-description">Дизайнерские решения</p>    
+                        </div>
                         </li>                
                      </ul>
             </div>
