--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
     <main>
         <!--Секция Hero-->
         <section class="hero">
-            <div class="overlay">
+            
+            <div class="container">
             <h1 class="hero-headline">Эффективные решения для вашего бизнеса</h1>
             <div class="hero-button">
             <button data-modal-open class="modal-button" type="button">Заказать услугу</button>
@@ -293,6 +294,7 @@
              </div>
         </div>
     </footer>
+    <div class="modal-animation">
 <div class="backdrop is-hidden" data-modal>
     <div class="modal">
         <div class="modal-close">
@@ -302,6 +304,7 @@
               </svg>
         </a>
        </div> 
+    </div>
     </div>
     
 </div>
