--- a/index.html
+++ b/index.html
@@ -294,17 +294,17 @@
              </div>
         </div>
     </footer>
-    <div class="modal-animation">
+ 
 <div class="backdrop is-hidden" data-modal>
     <div class="modal">
         <div class="modal-close">
-        <a data-modal-close class="modal-cross-link" href="">
+        <a data-modal-close class="modal-cross-link" href="#">
               <svg class="modal-icon">
               <use href="./images/sprite.svg#icon-cross"></use>
               </svg>
         </a>
        </div> 
-    </div>
+   
     </div>
     
 </div>
